<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_rewards_icon"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_analysis_process"
            android:title="@string/followers"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_activity"
            android:title="@string/activity" />

        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_social_icon"
            android:title="@string/feedback" />

    </group>


</menu>
