<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.larvaesoft.kamaau.Activity.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            
            <ImageView
                android:layout_width="230dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="normal"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/check_conditions"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/agree"
                android:textSize="12dp"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/read_terms"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/terms"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="12dp"
                    android:text="@string/using"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:visibility="invisible"
                android:textSize="18dp"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/gradient_bg"
                android:layout_centerHorizontal="true"
                android:text="@string/login" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:visibility="invisible"
            android:minWidth="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
